[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# --- Core Metadata ---
name = "nightcrawler-mitm"
version = "0.3.0" 
description = "A mitmproxy addon for background passive analysis, crawling, and basic active scanning."
readme = "README.md"
requires-python = ">=3.9"

# --- Author & License ---
authors = [
    { name = "Paolo Perego", email = "paolo@codiceinsicuro.it" },
]
license = { file = "LICENSE" } 

# --- PyPI Classifiers ---
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

# --- Keywords ---
keywords = ["mitmproxy", "security", "scanner", "proxy", "pentest", "xss", "sqli", "crawler", "addon"]

# --- Dependencies ---
dependencies = [
    "mitmproxy>=10.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.10.0",
]

# --- Project URLs (Optional but recommended) ---
[project.urls]
"Homepage" = "https://github.com/thesp0nge/nightcrawler-mitm"
"Repository" = "https://github.com/thesp0nge/nightcrawler-mitm"
"Bug Tracker" = "https://github.com/thesp0nge/nightcrawler-mitm/issues"

# --- Console Script Entry Point ---
# Defines the 'nightcrawler' command available after installation
[project.scripts]
nightcrawler = "nightcrawler.runner:main"
